--- a/App/MainForm.resx
+++ b/App/MainForm.resx
@@ -117,4 +117,87 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="statusBar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>118, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notifyIcon1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApf8EAKX/lgCl/+QApf/uAKX/7ACl
+        /9gApf+UAKX/EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl/7gApf/oAKX/6ACl/+4Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf+UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApf8EAKX//ACl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl/9IAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl/wQApf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf/2AKX/8ACl//8Apf//AKX/6gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKX/CACl/ywApf8uAKX/NACl
+        //8Apf//AKX//wCl//8Apf//AKX/5gCl/ywApf8OAKX/6ACl//8Apf/uAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApf+kAKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl/+IApf8mAAAAAACl/xoApf/sAKX//wCl/+AAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl
+        /7wApf//AKX//wCl//8Apf//AKX//wCl//8Apf/gAKX/JAAAAAAApf8WAKX/1ACl//8Apf//AKX/jAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAKX/wACl//8Apf//AKX//wCl//8Apf//AKX/4ACl/yIAAAAAAKX/FACl/9AApf//AKX//wCl
+        /54Apf8CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl
+        /xIApf9qAKX/cgCl/3IApf/eAKX//wCl//8Apf//AKX//wCl/+AApf8iAAAAAACl/xQApf/OAKX//wCl
+        //8Apf+gAKX/AgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAKX/cACl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf/gAKX/IgAAAAAApf8SAKX/zACl
+        //8Apf//AKX/ogCl/wIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAApf92AKX//wCl//8Apf//AKX//wCl//8Apf//AKX/4ACl/yIAAAAAAKX/EgCl
+        /8wApf//AKX//wCl/6IApf8CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl/ywApf+wAKX//ACl//8Apf//AKX//wCl/+AApf8iAAAAAACl
+        /xIApf/MAKX//wCl//8Apf+iAKX/AgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAApf8CAKX/NACl/2IApf90AKX/bgCl/04Apf8WAAAAAAAAAAAApf82AKX/zgCl//8Apf/gAKX/IgAA
+        AAAApf8SAKX/zACl//8Apf//AKX/ogCl/wIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAApf8MAKX/fACl/+QApf//AKX//wCl//8Apf//AKX//wCl//oApf+0AKX/OAAAAAAApf8IAKX/jgCl
+        /yIAAAAAAKX/FACl/84Apf//AKX//wCl/6IApf8CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAKX/OgCl/+AApf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf/8AKX/kgCl
+        /wYAAAAAAAAAAACl/xQApf/OAKX//wCl//8Apf+iAKX/AgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAACl/0QApf/0AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        //8Apf//AKX/tACl/wQAAAAAAKX/pgCl//8Apf//AKX/ogCl/wIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAApf8kAKX/8ACl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX/kgAAAAAApf80AKX//ACl/6IApf8CAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl/7gApf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf/8AKX/OAAAAAAApf9eAKX/AgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApf82AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf+yAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl/5IApf//AKX//wCl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//oApf8SAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKX/0ACl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        /0oAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApf/qAKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        //8Apf//AKX/agAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl
+        /+4Apf//AKX//wCl//8Apf/eAKX/WgCl/ygApf9AAKX/vACl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf9wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAKX/4gCl//8Apf//AKX/6gCl/xwAAAAAAAAAAAAAAAAApf8EAKX/wACl//8Apf//AKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl/1wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAApf+0AKX//wCl//8Apf+IAAAAAAAAAAAAAAAAAAAAAAAAAAAApf9EAKX//wCl
+        //8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX/MAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACl/2YApf//AKX//wCl/2oAAAAAAAAAAAAAAAAAAAAAAAAAAACl
+        /ywApf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl/+IApf8CAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKX/DgCl/+wApf//AKX/ogAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAKX/XgCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX/eAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKX/bACl//8Apf/6AKX/SAAA
+        AAAAAAAAAAAAAACl/x4Apf/iAKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl/9wApf8KAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApf8CAKX/rACl
+        //8Apf/6AKX/ogCl/2oApf+KAKX/7ACl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf/0AKX/NAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAApf8IAKX/qgCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX/7ACl
+        /z4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAApf8CAKX/agCl/+wApf//AKX//wCl//8Apf//AKX//wCl//8Apf//AKX//wCl
+        /7QApf8gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKX/DACl/2IApf+uAKX/4ACl/+wApf/mAKX/ygCl
+        /44Apf80AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////gf//+AD///gA///4AP//+Bj//4A4//+AcP//gOH//4HD//wDh//8
+        Bw///A4f//8cP/wDuH/wAPD/4ABh/8AAM/+AAD//gAAf/wAAH/8AAB//AAAf/wcAH/8PgB//D8Af/5/A
+        H/+PwD//z4A//8IAf//gAP//+AH///4H//8=
+</value>
+  </data>
 </root>
